# api.ndinhnguyen

./: .dev.vars.example  .gitignore  AGENTS.md  Makefile  README.md  README_TREE.md  env.template  package.json  pylock.toml  pyproject.toml  schema.sql  wrangler.jsonc
docs/: README_TREE.md  abc.txt  postman.json  shope.txt  shope_cashback.txt  shope_convert.txt
migrations/: 0002_create_users.sql  0003_create_cashbacks.sql  0004_add_item_id_to_cashbacks.sql  0004_add_items_to_cashbacks.sql  0005_update_cashbacks_schema.sql  0006_rename_coversion_to_conversion.sql  0007_remove_order_id_from_cashbacks.sql
postman/: bookmarks_api_collection.json
scripts/: get_logs.sh
src/: __init__.py  app.py  context.py  entry.py  main.py  models.py  repository.py  service.py  stats_manager.py
src/api/: helpers.py  middleware.py
src/api/routes/: auth.py  bookmarks.py  cashbacks.py  categories.py  health.py  shopee.py  stats.py
src/core/: auth.py  constants.py  responses.py  settings.py
src/features/bookmarks/: repository.py  schemas.py  service.py
src/features/cashbacks/: __init__.py  interfaces.py  repository.py  schemas.py  service.py
src/features/shopee/: schemas.py  service.py
src/features/stats/: constants.py  errors.py  path_builder.py  runtime.py  schemas.py  service.py  snapshot.py  validators.py
src/features/users/: __init__.py  repository.py  schemas.py  service.py
src/infra/: d1.py  http.py  object_store.py
tests/: test_api.py  test_auth.py  test_cashbacks.py  test_core.py  test_service.py  test_shopee.py  test_stats_manager.py
(+5 files in other folders)
