[project]
name = "simple-skill-api"
version = "0.1.0"
description = "FastAPI backend for the Simple Skill bookmark dashboard"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
