[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "api"
version = "0.1.0"
description = "Personal API for Nguyen Dinh Nguyen"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "workers-py>=1.11.0",
  "workers-runtime-sdk",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
